Lab-14/statefulset-mysql.yml
kind: StatefulSet 
apiVersion: apps/v1
metadata:
   name: mysql-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
        app: mysql
   template:
      metadata:
        labels:
          app: mysql
      spec:
        containers:
          - name : mysql-pod
            image: mysql:latest
            ports:
              - containerPort : 3306
            volumeMounts:
              - name: data-mysql-volume
                mountPath: /var/lib/mysql
        tolerations:
        - key: "tier"
          operator: "Equal"
          value: "backend"
          effect: "NoSchedule"
        affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: role
                  operator: In
                  values:
                  - worker
   volumeClaimTemplates:
   - metadata:
       name: data-mysql-volume 
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: "example-nfs"
       resources:
         requests:
           storage: 500Mi
